Fixed input box height being too small on short device; vh units --> px

--- a/src/styles/_popup.scss
+++ b/src/styles/_popup.scss
@@ -35,7 +35,7 @@
     }
 
     input {
-        height: 4vh;
+        height: 28px;
     }
 
 
